iotsa 2.0 - 25-May-2018

- The API has changed in an incompatible way: you no longer need to create the IotsaWebServer object
  yourself. The IotsaApplication constructor does this, if needed.
- The server by-reference instance variable of application and module objects is now a pointer.
- There are a number of compile-time flags in iotsaBuildOptions.h that enable and disable
  various features such as REST api access, normal web access and more.
- COAP is supported (as an alternative to, or in addition to, REST access).

iotsa 1.8.1 - 25-May-2018

- Fixed issue with platformio not finding ESP8266HttpClient.h

iotsa 1.8 - 15-Apr-2018

- IotsaRequest and IotsaButton modules added.

iotsa 1.7.2 - 8-Apr-2018

- Enabled (experimental) esp32 support again.
- Various fixes to iotsaControl and how it interfaces to iotsa boards

iotsa 1.7.1 - 30-Mar-2018

- Added iotsaControl module and program to allow programmatic configuration of iotsa devices.
- Added more variables to /api/config for iotsaControl.
- Fixed case error in Esp.h include which stopped travis builds from working.

iotsa 1.6.1

- Added iotsaVersion.h and return version info in config api.

iotsa 1.6 - 26-Mar-2018

- WiFi config and general config have been split into two modules (listening on /wifi and /config, and the
  respective /api endpoints). All general configuration parameters are now in a global iotsaConfig structure.
  The iotsaConfig module does not have to be instantiated, this happens automatically.
- Configuration mode can now be active on the normal WiFi network. The special private network is only used when
  no WiFi network is configured or the configured network is not available. Private network no longer implies
  configuration mode.
- All web form argument handling has been converted to no longer using looping over the arguments.
- Default timeouts for reprogramming and configuration mode and such set to 5 minutes.

iotsa 1.5 - 8-Mar-2018
